parser/parser.output
Grammar

    0 $accept: input $end

    1 input: statement ';'

    2 statement: use_stmt
    3          | select_stmt
    4          | insert_stmt
    5          | update_stmt
    6          | delete_stmt
    7          | create_db_stmt
    8          | drop_db_stmt
    9          | create_table_stmt
   10          | drop_table_stmt

   11 use_stmt: TOK_USE TOK_IDENT

   12 create_db_stmt: TOK_CREATE TOK_DATABASE TOK_IDENT

   13 drop_db_stmt: TOK_DROP TOK_DATABASE TOK_IDENT

   14 create_table_stmt: TOK_CREATE TOK_TABLE TOK_IDENT '(' column_def_list ')'

   15 drop_table_stmt: TOK_DROP TOK_TABLE TOK_IDENT

   16 column_def_list: column_def
   17                | column_def_list ',' column_def

   18 column_def: TOK_IDENT data_type opt_primary_key opt_nullable

   19 data_type: TOK_INT
   20          | TOK_BIGINT
   21          | TOK_VARCHAR
   22          | TOK_TEXT
   23          | TOK_BOOLEAN

   24 opt_primary_key: ε
   25                | TOK_PRIMARY TOK_KEY

   26 opt_nullable: ε
   27             | TOK_NOT TOK_NULL
   28             | TOK_NULL

   29 select_stmt: TOK_SELECT select_list TOK_FROM TOK_IDENT opt_where opt_order_by opt_limit

   30 select_list: '*'
   31            | column_name_list

   32 column_name_list: TOK_IDENT
   33                 | column_name_list ',' TOK_IDENT

   34 insert_stmt: TOK_INSERT TOK_INTO TOK_IDENT insert_columns TOK_VALUES insert_values

   35 insert_columns: ε
   36               | '(' column_name_list ')'

   37 insert_values: '(' value_item_list ')'

   38 in_values: '(' value_item_list ')'

   39 value_item_list: value_item
   40                | value_item_list ',' value_item

   41 value_item: TOK_NUMBER
   42           | TOK_STRING

   43 update_stmt: TOK_UPDATE TOK_IDENT TOK_SET assignment_list opt_where

   44 assignment_list: assignment
   45                | assignment_list ',' assignment

   46 assignment: TOK_IDENT TOK_EQ value_item

   47 delete_stmt: TOK_DELETE TOK_FROM TOK_IDENT opt_where

   48 opt_where: ε
   49          | TOK_WHERE condition_expr

   50 condition_expr: condition_term
   51               | condition_expr TOK_OR condition_term

   52 condition_term: condition_factor
   53               | condition_term TOK_AND condition_factor

   54 condition_factor: TOK_IDENT compare_op value_item
   55                 | TOK_IDENT TOK_IN in_values
   56                 | TOK_IDENT TOK_NOT TOK_IN in_values
   57                 | TOK_IDENT TOK_LIKE TOK_STRING
   58                 | TOK_IDENT TOK_NOT TOK_LIKE TOK_STRING
   59                 | TOK_IDENT TOK_IS TOK_NULL
   60                 | TOK_IDENT TOK_IS TOK_NOT TOK_NULL
   61                 | '(' condition_expr ')'
   62                 | TOK_NOT condition_factor

   63 compare_op: TOK_EQ
   64           | TOK_NE
   65           | TOK_GT
   66           | TOK_GE
   67           | TOK_LT
   68           | TOK_LE

   69 opt_order_by: ε
   70             | TOK_ORDER TOK_BY order_item

   71 order_item: TOK_IDENT
   72           | TOK_IDENT order_direction

   73 order_direction: TOK_ASC
   74                | TOK_DESC

   75 opt_limit: ε
   76          | TOK_LIMIT TOK_NUMBER
   77          | TOK_LIMIT TOK_NUMBER TOK_OFFSET TOK_NUMBER
   78          | TOK_LIMIT TOK_NUMBER ',' TOK_NUMBER


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 14 36 37 38 61
    ')' (41) 14 36 37 38 61
    '*' (42) 30
    ',' (44) 17 33 40 45 78
    ';' (59) 1
    error (256)
    TOK_USE (258) 11
    TOK_INSERT (259) 34
    TOK_DELETE (260) 47
    TOK_UPDATE (261) 43
    TOK_SET (262) 43
    TOK_INTO (263) 34
    TOK_VALUES (264) 34
    TOK_SELECT (265) 29
    TOK_WHERE (266) 49
    TOK_FROM (267) 29 47
    TOK_AND (268) 53
    TOK_OR (269) 51
    TOK_NOT (270) 27 56 58 60 62
    TOK_GE (271) 66
    TOK_LE (272) 68
    TOK_GT (273) 65
    TOK_LT (274) 67
    TOK_EQ (275) 46 63
    TOK_NE (276) 64
    TOK_IN (277) 55 56
    TOK_IS (278) 59 60
    TOK_LIKE (279) 57 58
    TOK_ORDER (280) 70
    TOK_BY (281) 70
    TOK_ASC (282) 73
    TOK_DESC (283) 74
    TOK_LIMIT (284) 76 77 78
    TOK_OFFSET (285) 77
    TOK_CREATE (286) 12 14
    TOK_DROP (287) 13 15
    TOK_DATABASE (288) 12 13
    TOK_TABLE (289) 14 15
    TOK_PRIMARY (290) 25
    TOK_KEY (291) 25
    TOK_NULL (292) 27 28 59 60
    TOK_INT (293) 19
    TOK_BIGINT (294) 20
    TOK_VARCHAR (295) 21
    TOK_TEXT (296) 22
    TOK_BOOLEAN (297) 23
    TOK_NUMBER <num> (298) 41 76 77 78
    TOK_IDENT <str> (299) 11 12 13 14 15 18 29 32 33 34 43 46 47 54 55 56 57 58 59 60 71 72
    TOK_STRING <str> (300) 42 57 58


Nonterminals, with rules where they appear

    $accept (51)
        on left: 0
    input <node> (52)
        on left: 1
        on right: 0
    statement <node> (53)
        on left: 2 3 4 5 6 7 8 9 10
        on right: 1
    use_stmt <node> (54)
        on left: 11
        on right: 2
    create_db_stmt <node> (55)
        on left: 12
        on right: 7
    drop_db_stmt <node> (56)
        on left: 13
        on right: 8
    create_table_stmt <node> (57)
        on left: 14
        on right: 9
    drop_table_stmt <node> (58)
        on left: 15
        on right: 10
    column_def_list <list> (59)
        on left: 16 17
        on right: 14 17
    column_def <node> (60)
        on left: 18
        on right: 16 17
    data_type <dt> (61)
        on left: 19 20 21 22 23
        on right: 18
    opt_primary_key <num> (62)
        on left: 24 25
        on right: 18
    opt_nullable <num> (63)
        on left: 26 27 28
        on right: 18
    select_stmt <node> (64)
        on left: 29
        on right: 3
    select_list <list> (65)
        on left: 30 31
        on right: 29
    column_name_list <list> (66)
        on left: 32 33
        on right: 31 33 36
    insert_stmt <node> (67)
        on left: 34
        on right: 4
    insert_columns <list> (68)
        on left: 35 36
        on right: 34
    insert_values <list> (69)
        on left: 37
        on right: 34
    in_values <list> (70)
        on left: 38
        on right: 55 56
    value_item_list <list> (71)
        on left: 39 40
        on right: 37 38 40
    value_item <node> (72)
        on left: 41 42
        on right: 39 40 46 54
    update_stmt <node> (73)
        on left: 43
        on right: 5
    assignment_list <list> (74)
        on left: 44 45
        on right: 43 45
    assignment <node> (75)
        on left: 46
        on right: 44 45
    delete_stmt <node> (76)
        on left: 47
        on right: 6
    opt_where <node> (77)
        on left: 48 49
        on right: 29 43 47
    condition_expr <node> (78)
        on left: 50 51
        on right: 49 51 61
    condition_term <node> (79)
        on left: 52 53
        on right: 50 51 53
    condition_factor <node> (80)
        on left: 54 55 56 57 58 59 60 61 62
        on right: 52 53 62
    compare_op <op> (81)
        on left: 63 64 65 66 67 68
        on right: 54
    opt_order_by <node> (82)
        on left: 69 70
        on right: 29
    order_item <node> (83)
        on left: 71 72
        on right: 70
    order_direction <op> (84)
        on left: 73 74
        on right: 72
    opt_limit <node> (85)
        on left: 75 76 77 78
        on right: 29


State 0

    0 $accept: • input $end

    TOK_USE     shift, and go to state 1
    TOK_INSERT  shift, and go to state 2
    TOK_DELETE  shift, and go to state 3
    TOK_UPDATE  shift, and go to state 4
    TOK_SELECT  shift, and go to state 5
    TOK_CREATE  shift, and go to state 6
    TOK_DROP    shift, and go to state 7

    input              go to state 8
    statement          go to state 9
    use_stmt           go to state 10
    create_db_stmt     go to state 11
    drop_db_stmt       go to state 12
    create_table_stmt  go to state 13
    drop_table_stmt    go to state 14
    select_stmt        go to state 15
    insert_stmt        go to state 16
    update_stmt        go to state 17
    delete_stmt        go to state 18


State 1

   11 use_stmt: TOK_USE • TOK_IDENT

    TOK_IDENT  shift, and go to state 19


State 2

   34 insert_stmt: TOK_INSERT • TOK_INTO TOK_IDENT insert_columns TOK_VALUES insert_values

    TOK_INTO  shift, and go to state 20


State 3

   47 delete_stmt: TOK_DELETE • TOK_FROM TOK_IDENT opt_where

    TOK_FROM  shift, and go to state 21


State 4

   43 update_stmt: TOK_UPDATE • TOK_IDENT TOK_SET assignment_list opt_where

    TOK_IDENT  shift, and go to state 22


State 5

   29 select_stmt: TOK_SELECT • select_list TOK_FROM TOK_IDENT opt_where opt_order_by opt_limit

    TOK_IDENT  shift, and go to state 23
    '*'        shift, and go to state 24

    select_list       go to state 25
    column_name_list  go to state 26


State 6

   12 create_db_stmt: TOK_CREATE • TOK_DATABASE TOK_IDENT
   14 create_table_stmt: TOK_CREATE • TOK_TABLE TOK_IDENT '(' column_def_list ')'

    TOK_DATABASE  shift, and go to state 27
    TOK_TABLE     shift, and go to state 28


State 7

   13 drop_db_stmt: TOK_DROP • TOK_DATABASE TOK_IDENT
   15 drop_table_stmt: TOK_DROP • TOK_TABLE TOK_IDENT

    TOK_DATABASE  shift, and go to state 29
    TOK_TABLE     shift, and go to state 30


State 8

    0 $accept: input • $end

    $end  shift, and go to state 31


State 9

    1 input: statement • ';'

    ';'  shift, and go to state 32


State 10

    2 statement: use_stmt •

    $default  reduce using rule 2 (statement)


State 11

    7 statement: create_db_stmt •

    $default  reduce using rule 7 (statement)


State 12

    8 statement: drop_db_stmt •

    $default  reduce using rule 8 (statement)


State 13

    9 statement: create_table_stmt •

    $default  reduce using rule 9 (statement)


State 14

   10 statement: drop_table_stmt •

    $default  reduce using rule 10 (statement)


State 15

    3 statement: select_stmt •

    $default  reduce using rule 3 (statement)


State 16

    4 statement: insert_stmt •

    $default  reduce using rule 4 (statement)


State 17

    5 statement: update_stmt •

    $default  reduce using rule 5 (statement)


State 18

    6 statement: delete_stmt •

    $default  reduce using rule 6 (statement)


State 19

   11 use_stmt: TOK_USE TOK_IDENT •

    $default  reduce using rule 11 (use_stmt)


State 20

   34 insert_stmt: TOK_INSERT TOK_INTO • TOK_IDENT insert_columns TOK_VALUES insert_values

    TOK_IDENT  shift, and go to state 33


State 21

   47 delete_stmt: TOK_DELETE TOK_FROM • TOK_IDENT opt_where

    TOK_IDENT  shift, and go to state 34


State 22

   43 update_stmt: TOK_UPDATE TOK_IDENT • TOK_SET assignment_list opt_where

    TOK_SET  shift, and go to state 35


State 23

   32 column_name_list: TOK_IDENT •

    $default  reduce using rule 32 (column_name_list)


State 24

   30 select_list: '*' •

    $default  reduce using rule 30 (select_list)


State 25

   29 select_stmt: TOK_SELECT select_list • TOK_FROM TOK_IDENT opt_where opt_order_by opt_limit

    TOK_FROM  shift, and go to state 36


State 26

   31 select_list: column_name_list •
   33 column_name_list: column_name_list • ',' TOK_IDENT

    ','  shift, and go to state 37

    $default  reduce using rule 31 (select_list)


State 27

   12 create_db_stmt: TOK_CREATE TOK_DATABASE • TOK_IDENT

    TOK_IDENT  shift, and go to state 38


State 28

   14 create_table_stmt: TOK_CREATE TOK_TABLE • TOK_IDENT '(' column_def_list ')'

    TOK_IDENT  shift, and go to state 39


State 29

   13 drop_db_stmt: TOK_DROP TOK_DATABASE • TOK_IDENT

    TOK_IDENT  shift, and go to state 40


State 30

   15 drop_table_stmt: TOK_DROP TOK_TABLE • TOK_IDENT

    TOK_IDENT  shift, and go to state 41


State 31

    0 $accept: input $end •

    $default  accept


State 32

    1 input: statement ';' •

    $default  reduce using rule 1 (input)


State 33

   34 insert_stmt: TOK_INSERT TOK_INTO TOK_IDENT • insert_columns TOK_VALUES insert_values

    '('  shift, and go to state 42

    $default  reduce using rule 35 (insert_columns)

    insert_columns  go to state 43


State 34

   47 delete_stmt: TOK_DELETE TOK_FROM TOK_IDENT • opt_where

    TOK_WHERE  shift, and go to state 44

    $default  reduce using rule 48 (opt_where)

    opt_where  go to state 45


State 35

   43 update_stmt: TOK_UPDATE TOK_IDENT TOK_SET • assignment_list opt_where

    TOK_IDENT  shift, and go to state 46

    assignment_list  go to state 47
    assignment       go to state 48


State 36

   29 select_stmt: TOK_SELECT select_list TOK_FROM • TOK_IDENT opt_where opt_order_by opt_limit

    TOK_IDENT  shift, and go to state 49


State 37

   33 column_name_list: column_name_list ',' • TOK_IDENT

    TOK_IDENT  shift, and go to state 50


State 38

   12 create_db_stmt: TOK_CREATE TOK_DATABASE TOK_IDENT •

    $default  reduce using rule 12 (create_db_stmt)


State 39

   14 create_table_stmt: TOK_CREATE TOK_TABLE TOK_IDENT • '(' column_def_list ')'

    '('  shift, and go to state 51


State 40

   13 drop_db_stmt: TOK_DROP TOK_DATABASE TOK_IDENT •

    $default  reduce using rule 13 (drop_db_stmt)


State 41

   15 drop_table_stmt: TOK_DROP TOK_TABLE TOK_IDENT •

    $default  reduce using rule 15 (drop_table_stmt)


State 42

   36 insert_columns: '(' • column_name_list ')'

    TOK_IDENT  shift, and go to state 23

    column_name_list  go to state 52


State 43

   34 insert_stmt: TOK_INSERT TOK_INTO TOK_IDENT insert_columns • TOK_VALUES insert_values

    TOK_VALUES  shift, and go to state 53


State 44

   49 opt_where: TOK_WHERE • condition_expr

    TOK_NOT    shift, and go to state 54
    TOK_IDENT  shift, and go to state 55
    '('        shift, and go to state 56

    condition_expr    go to state 57
    condition_term    go to state 58
    condition_factor  go to state 59


State 45

   47 delete_stmt: TOK_DELETE TOK_FROM TOK_IDENT opt_where •

    $default  reduce using rule 47 (delete_stmt)


State 46

   46 assignment: TOK_IDENT • TOK_EQ value_item

    TOK_EQ  shift, and go to state 60


State 47

   43 update_stmt: TOK_UPDATE TOK_IDENT TOK_SET assignment_list • opt_where
   45 assignment_list: assignment_list • ',' assignment

    TOK_WHERE  shift, and go to state 44
    ','        shift, and go to state 61

    $default  reduce using rule 48 (opt_where)

    opt_where  go to state 62


State 48

   44 assignment_list: assignment •

    $default  reduce using rule 44 (assignment_list)


State 49

   29 select_stmt: TOK_SELECT select_list TOK_FROM TOK_IDENT • opt_where opt_order_by opt_limit

    TOK_WHERE  shift, and go to state 44

    $default  reduce using rule 48 (opt_where)

    opt_where  go to state 63


State 50

   33 column_name_list: column_name_list ',' TOK_IDENT •

    $default  reduce using rule 33 (column_name_list)


State 51

   14 create_table_stmt: TOK_CREATE TOK_TABLE TOK_IDENT '(' • column_def_list ')'

    TOK_IDENT  shift, and go to state 64

    column_def_list  go to state 65
    column_def       go to state 66


State 52

   33 column_name_list: column_name_list • ',' TOK_IDENT
   36 insert_columns: '(' column_name_list • ')'

    ')'  shift, and go to state 67
    ','  shift, and go to state 37


State 53

   34 insert_stmt: TOK_INSERT TOK_INTO TOK_IDENT insert_columns TOK_VALUES • insert_values

    '('  shift, and go to state 68

    insert_values  go to state 69


State 54

   62 condition_factor: TOK_NOT • condition_factor

    TOK_NOT    shift, and go to state 54
    TOK_IDENT  shift, and go to state 55
    '('        shift, and go to state 56

    condition_factor  go to state 70


State 55

   54 condition_factor: TOK_IDENT • compare_op value_item
   55                 | TOK_IDENT • TOK_IN in_values
   56                 | TOK_IDENT • TOK_NOT TOK_IN in_values
   57                 | TOK_IDENT • TOK_LIKE TOK_STRING
   58                 | TOK_IDENT • TOK_NOT TOK_LIKE TOK_STRING
   59                 | TOK_IDENT • TOK_IS TOK_NULL
   60                 | TOK_IDENT • TOK_IS TOK_NOT TOK_NULL

    TOK_NOT   shift, and go to state 71
    TOK_GE    shift, and go to state 72
    TOK_LE    shift, and go to state 73
    TOK_GT    shift, and go to state 74
    TOK_LT    shift, and go to state 75
    TOK_EQ    shift, and go to state 76
    TOK_NE    shift, and go to state 77
    TOK_IN    shift, and go to state 78
    TOK_IS    shift, and go to state 79
    TOK_LIKE  shift, and go to state 80

    compare_op  go to state 81


State 56

   61 condition_factor: '(' • condition_expr ')'

    TOK_NOT    shift, and go to state 54
    TOK_IDENT  shift, and go to state 55
    '('        shift, and go to state 56

    condition_expr    go to state 82
    condition_term    go to state 58
    condition_factor  go to state 59


State 57

   49 opt_where: TOK_WHERE condition_expr •
   51 condition_expr: condition_expr • TOK_OR condition_term

    TOK_OR  shift, and go to state 83

    $default  reduce using rule 49 (opt_where)


State 58

   50 condition_expr: condition_term •
   53 condition_term: condition_term • TOK_AND condition_factor

    TOK_AND  shift, and go to state 84

    $default  reduce using rule 50 (condition_expr)


State 59

   52 condition_term: condition_factor •

    $default  reduce using rule 52 (condition_term)


State 60

   46 assignment: TOK_IDENT TOK_EQ • value_item

    TOK_NUMBER  shift, and go to state 85
    TOK_STRING  shift, and go to state 86

    value_item  go to state 87


State 61

   45 assignment_list: assignment_list ',' • assignment

    TOK_IDENT  shift, and go to state 46

    assignment  go to state 88


State 62

   43 update_stmt: TOK_UPDATE TOK_IDENT TOK_SET assignment_list opt_where •

    $default  reduce using rule 43 (update_stmt)


State 63

   29 select_stmt: TOK_SELECT select_list TOK_FROM TOK_IDENT opt_where • opt_order_by opt_limit

    TOK_ORDER  shift, and go to state 89

    $default  reduce using rule 69 (opt_order_by)

    opt_order_by  go to state 90


State 64

   18 column_def: TOK_IDENT • data_type opt_primary_key opt_nullable

    TOK_INT      shift, and go to state 91
    TOK_BIGINT   shift, and go to state 92
    TOK_VARCHAR  shift, and go to state 93
    TOK_TEXT     shift, and go to state 94
    TOK_BOOLEAN  shift, and go to state 95

    data_type  go to state 96


State 65

   14 create_table_stmt: TOK_CREATE TOK_TABLE TOK_IDENT '(' column_def_list • ')'
   17 column_def_list: column_def_list • ',' column_def

    ')'  shift, and go to state 97
    ','  shift, and go to state 98


State 66

   16 column_def_list: column_def •

    $default  reduce using rule 16 (column_def_list)


State 67

   36 insert_columns: '(' column_name_list ')' •

    $default  reduce using rule 36 (insert_columns)


State 68

   37 insert_values: '(' • value_item_list ')'

    TOK_NUMBER  shift, and go to state 85
    TOK_STRING  shift, and go to state 86

    value_item_list  go to state 99
    value_item       go to state 100


State 69

   34 insert_stmt: TOK_INSERT TOK_INTO TOK_IDENT insert_columns TOK_VALUES insert_values •

    $default  reduce using rule 34 (insert_stmt)


State 70

   62 condition_factor: TOK_NOT condition_factor •

    $default  reduce using rule 62 (condition_factor)


State 71

   56 condition_factor: TOK_IDENT TOK_NOT • TOK_IN in_values
   58                 | TOK_IDENT TOK_NOT • TOK_LIKE TOK_STRING

    TOK_IN    shift, and go to state 101
    TOK_LIKE  shift, and go to state 102


State 72

   66 compare_op: TOK_GE •

    $default  reduce using rule 66 (compare_op)


State 73

   68 compare_op: TOK_LE •

    $default  reduce using rule 68 (compare_op)


State 74

   65 compare_op: TOK_GT •

    $default  reduce using rule 65 (compare_op)


State 75

   67 compare_op: TOK_LT •

    $default  reduce using rule 67 (compare_op)


State 76

   63 compare_op: TOK_EQ •

    $default  reduce using rule 63 (compare_op)


State 77

   64 compare_op: TOK_NE •

    $default  reduce using rule 64 (compare_op)


State 78

   55 condition_factor: TOK_IDENT TOK_IN • in_values

    '('  shift, and go to state 103

    in_values  go to state 104


State 79

   59 condition_factor: TOK_IDENT TOK_IS • TOK_NULL
   60                 | TOK_IDENT TOK_IS • TOK_NOT TOK_NULL

    TOK_NOT   shift, and go to state 105
    TOK_NULL  shift, and go to state 106


State 80

   57 condition_factor: TOK_IDENT TOK_LIKE • TOK_STRING

    TOK_STRING  shift, and go to state 107


State 81

   54 condition_factor: TOK_IDENT compare_op • value_item

    TOK_NUMBER  shift, and go to state 85
    TOK_STRING  shift, and go to state 86

    value_item  go to state 108


State 82

   51 condition_expr: condition_expr • TOK_OR condition_term
   61 condition_factor: '(' condition_expr • ')'

    TOK_OR  shift, and go to state 83
    ')'     shift, and go to state 109


State 83

   51 condition_expr: condition_expr TOK_OR • condition_term

    TOK_NOT    shift, and go to state 54
    TOK_IDENT  shift, and go to state 55
    '('        shift, and go to state 56

    condition_term    go to state 110
    condition_factor  go to state 59


State 84

   53 condition_term: condition_term TOK_AND • condition_factor

    TOK_NOT    shift, and go to state 54
    TOK_IDENT  shift, and go to state 55
    '('        shift, and go to state 56

    condition_factor  go to state 111


State 85

   41 value_item: TOK_NUMBER •

    $default  reduce using rule 41 (value_item)


State 86

   42 value_item: TOK_STRING •

    $default  reduce using rule 42 (value_item)


State 87

   46 assignment: TOK_IDENT TOK_EQ value_item •

    $default  reduce using rule 46 (assignment)


State 88

   45 assignment_list: assignment_list ',' assignment •

    $default  reduce using rule 45 (assignment_list)


State 89

   70 opt_order_by: TOK_ORDER • TOK_BY order_item

    TOK_BY  shift, and go to state 112


State 90

   29 select_stmt: TOK_SELECT select_list TOK_FROM TOK_IDENT opt_where opt_order_by • opt_limit

    TOK_LIMIT  shift, and go to state 113

    $default  reduce using rule 75 (opt_limit)

    opt_limit  go to state 114


State 91

   19 data_type: TOK_INT •

    $default  reduce using rule 19 (data_type)


State 92

   20 data_type: TOK_BIGINT •

    $default  reduce using rule 20 (data_type)


State 93

   21 data_type: TOK_VARCHAR •

    $default  reduce using rule 21 (data_type)


State 94

   22 data_type: TOK_TEXT •

    $default  reduce using rule 22 (data_type)


State 95

   23 data_type: TOK_BOOLEAN •

    $default  reduce using rule 23 (data_type)


State 96

   18 column_def: TOK_IDENT data_type • opt_primary_key opt_nullable

    TOK_PRIMARY  shift, and go to state 115

    $default  reduce using rule 24 (opt_primary_key)

    opt_primary_key  go to state 116


State 97

   14 create_table_stmt: TOK_CREATE TOK_TABLE TOK_IDENT '(' column_def_list ')' •

    $default  reduce using rule 14 (create_table_stmt)


State 98

   17 column_def_list: column_def_list ',' • column_def

    TOK_IDENT  shift, and go to state 64

    column_def  go to state 117


State 99

   37 insert_values: '(' value_item_list • ')'
   40 value_item_list: value_item_list • ',' value_item

    ')'  shift, and go to state 118
    ','  shift, and go to state 119


State 100

   39 value_item_list: value_item •

    $default  reduce using rule 39 (value_item_list)


State 101

   56 condition_factor: TOK_IDENT TOK_NOT TOK_IN • in_values

    '('  shift, and go to state 103

    in_values  go to state 120


State 102

   58 condition_factor: TOK_IDENT TOK_NOT TOK_LIKE • TOK_STRING

    TOK_STRING  shift, and go to state 121


State 103

   38 in_values: '(' • value_item_list ')'

    TOK_NUMBER  shift, and go to state 85
    TOK_STRING  shift, and go to state 86

    value_item_list  go to state 122
    value_item       go to state 100


State 104

   55 condition_factor: TOK_IDENT TOK_IN in_values •

    $default  reduce using rule 55 (condition_factor)


State 105

   60 condition_factor: TOK_IDENT TOK_IS TOK_NOT • TOK_NULL

    TOK_NULL  shift, and go to state 123


State 106

   59 condition_factor: TOK_IDENT TOK_IS TOK_NULL •

    $default  reduce using rule 59 (condition_factor)


State 107

   57 condition_factor: TOK_IDENT TOK_LIKE TOK_STRING •

    $default  reduce using rule 57 (condition_factor)


State 108

   54 condition_factor: TOK_IDENT compare_op value_item •

    $default  reduce using rule 54 (condition_factor)


State 109

   61 condition_factor: '(' condition_expr ')' •

    $default  reduce using rule 61 (condition_factor)


State 110

   51 condition_expr: condition_expr TOK_OR condition_term •
   53 condition_term: condition_term • TOK_AND condition_factor

    TOK_AND  shift, and go to state 84

    $default  reduce using rule 51 (condition_expr)


State 111

   53 condition_term: condition_term TOK_AND condition_factor •

    $default  reduce using rule 53 (condition_term)


State 112

   70 opt_order_by: TOK_ORDER TOK_BY • order_item

    TOK_IDENT  shift, and go to state 124

    order_item  go to state 125


State 113

   76 opt_limit: TOK_LIMIT • TOK_NUMBER
   77          | TOK_LIMIT • TOK_NUMBER TOK_OFFSET TOK_NUMBER
   78          | TOK_LIMIT • TOK_NUMBER ',' TOK_NUMBER

    TOK_NUMBER  shift, and go to state 126


State 114

   29 select_stmt: TOK_SELECT select_list TOK_FROM TOK_IDENT opt_where opt_order_by opt_limit •

    $default  reduce using rule 29 (select_stmt)


State 115

   25 opt_primary_key: TOK_PRIMARY • TOK_KEY

    TOK_KEY  shift, and go to state 127


State 116

   18 column_def: TOK_IDENT data_type opt_primary_key • opt_nullable

    TOK_NOT   shift, and go to state 128
    TOK_NULL  shift, and go to state 129

    $default  reduce using rule 26 (opt_nullable)

    opt_nullable  go to state 130


State 117

   17 column_def_list: column_def_list ',' column_def •

    $default  reduce using rule 17 (column_def_list)


State 118

   37 insert_values: '(' value_item_list ')' •

    $default  reduce using rule 37 (insert_values)


State 119

   40 value_item_list: value_item_list ',' • value_item

    TOK_NUMBER  shift, and go to state 85
    TOK_STRING  shift, and go to state 86

    value_item  go to state 131


State 120

   56 condition_factor: TOK_IDENT TOK_NOT TOK_IN in_values •

    $default  reduce using rule 56 (condition_factor)


State 121

   58 condition_factor: TOK_IDENT TOK_NOT TOK_LIKE TOK_STRING •

    $default  reduce using rule 58 (condition_factor)


State 122

   38 in_values: '(' value_item_list • ')'
   40 value_item_list: value_item_list • ',' value_item

    ')'  shift, and go to state 132
    ','  shift, and go to state 119


State 123

   60 condition_factor: TOK_IDENT TOK_IS TOK_NOT TOK_NULL •

    $default  reduce using rule 60 (condition_factor)


State 124

   71 order_item: TOK_IDENT •
   72           | TOK_IDENT • order_direction

    TOK_ASC   shift, and go to state 133
    TOK_DESC  shift, and go to state 134

    $default  reduce using rule 71 (order_item)

    order_direction  go to state 135


State 125

   70 opt_order_by: TOK_ORDER TOK_BY order_item •

    $default  reduce using rule 70 (opt_order_by)


State 126

   76 opt_limit: TOK_LIMIT TOK_NUMBER •
   77          | TOK_LIMIT TOK_NUMBER • TOK_OFFSET TOK_NUMBER
   78          | TOK_LIMIT TOK_NUMBER • ',' TOK_NUMBER

    TOK_OFFSET  shift, and go to state 136
    ','         shift, and go to state 137

    $default  reduce using rule 76 (opt_limit)


State 127

   25 opt_primary_key: TOK_PRIMARY TOK_KEY •

    $default  reduce using rule 25 (opt_primary_key)


State 128

   27 opt_nullable: TOK_NOT • TOK_NULL

    TOK_NULL  shift, and go to state 138


State 129

   28 opt_nullable: TOK_NULL •

    $default  reduce using rule 28 (opt_nullable)


State 130

   18 column_def: TOK_IDENT data_type opt_primary_key opt_nullable •

    $default  reduce using rule 18 (column_def)


State 131

   40 value_item_list: value_item_list ',' value_item •

    $default  reduce using rule 40 (value_item_list)


State 132

   38 in_values: '(' value_item_list ')' •

    $default  reduce using rule 38 (in_values)


State 133

   73 order_direction: TOK_ASC •

    $default  reduce using rule 73 (order_direction)


State 134

   74 order_direction: TOK_DESC •

    $default  reduce using rule 74 (order_direction)


State 135

   72 order_item: TOK_IDENT order_direction •

    $default  reduce using rule 72 (order_item)


State 136

   77 opt_limit: TOK_LIMIT TOK_NUMBER TOK_OFFSET • TOK_NUMBER

    TOK_NUMBER  shift, and go to state 139


State 137

   78 opt_limit: TOK_LIMIT TOK_NUMBER ',' • TOK_NUMBER

    TOK_NUMBER  shift, and go to state 140


State 138

   27 opt_nullable: TOK_NOT TOK_NULL •

    $default  reduce using rule 27 (opt_nullable)


State 139

   77 opt_limit: TOK_LIMIT TOK_NUMBER TOK_OFFSET TOK_NUMBER •

    $default  reduce using rule 77 (opt_limit)


State 140

   78 opt_limit: TOK_LIMIT TOK_NUMBER ',' TOK_NUMBER •

    $default  reduce using rule 78 (opt_limit)
